simulation adnabstract section

--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -55,7 +55,7 @@
 \begin{frontmatter}
 
 \title{A Ready To Use Web-Application Providing a Personalized Biopsy Schedule for Men With Low-Risk PCa Under Active Surveillance\tnoteref{wordcount}}
-\tnotetext[wordcount]{Word Count Abstract: 300; Word Count Text: 2500}
+\tnotetext[wordcount]{Word count abstract (headings excluded): 300; Word count text: 2484}
 
 %% Group authors per affiliation:
 \author[1]{Anirudh Tomer\corref{corauthor}, MSc} 
@@ -89,7 +89,7 @@
 %% or include affiliations in footnotes:
 
 \include{mainmatter/abstract}
-%Word count: 300 words
+%Word count: 299 words excluding headings
 
 \begin{keyword}
 Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer \sep Shared Decision Making
@@ -100,23 +100,23 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 \linenumbers
 
 \input{mainmatter/introduction}
-%Intro: 479 words
-%Cumsum: 479 words
+%Intro: 517 words
+%Cumsum: 517 words
 \input{mainmatter/study_cohort}
-%Study cohort: 194 words
-%Cumsum: 673 words
+%Study cohort: 225 words
+%Cumsum: 742 words
 \input{mainmatter/stat_analysis}
-%Stat analysis: 710 words
-%Cumsum: 1383 words
+%Stat analysis: 336 words
+%Cumsum: 1078 words
 \input{mainmatter/result}
-%Stat analysis: 363 words
-%Cumsum: 1746 words
+%Stat analysis: 632 words
+%Cumsum: 1710 words
 \input{mainmatter/discussion}
-%Stat analysis: 646 words
-%Cumsum: 2392 words
+%Stat analysis: 679 words
+%Cumsum: 2389 words
 \input{mainmatter/conclusion}
-%Conclusion: 108 words
-%Cumsum: 2500 words
+%Conclusion: 95 words
+%Cumsum: 2484 words
 
 \input{mainmatter/author_contrib}
 \input{mainmatter/acknowledment}
