--- a/report/clinical/supplementary.tex
+++ b/report/clinical/supplementary.tex
@@ -15,6 +15,7 @@
 \usepackage{graphicx}
 \usepackage{svg}
 \usepackage{mathtools}
+\usepackage{lscape}
 %\usepackage[utf8]{inputenc}
 
 %%%%%%%%%%%%%%%%%%%%%%%
