--- a/report/lastpaper/mainmatter/jointmodel.tex
+++ b/report/lastpaper/mainmatter/jointmodel.tex
@@ -3,14 +3,14 @@
 \label{sec:jointmodel}
 Let the true time of disease \textit{progression} for the ${i\mbox{-th}}$ patient be $T_i^*$. It is always observed with interval censoring ${l_i < T_i^* \leq r_i}$ (Figure~\ref{fig:delay_explanation}). In patients who obtain progression, $r_i$ and $l_i$ denote the time of their latest and second latest invasive tests. Otherwise, $l_i$ denotes the time of their latest test and ${r_i=\infty}$. Assuming $K$ longitudinal outcomes, let $\boldsymbol{y}_{ki}$ denote the ${n_{ki} \times 1}$ longitudinal response vector of the ${k\mbox{-th}}$ outcome, $k\epsilon\{1, \ldots, K\}$. The observed data of all $n$ patients is given by ${\mathcal{A}_n = \{l_i, r_i, \boldsymbol{y}_{1i},\ldots \boldsymbol{y}_{Ki}; i = 1, \ldots, n\}}$.
 
-To accommodate longitudinal outcomes of different types in a unified framework, the joint model consists of a generalized linear mixed-effects sub-model. In particular, the conditional
+To accommodate longitudinal outcomes of different types in a unified framework, the joint model consists of a generalized linear mixed-effects sub-model~\citep{laird1982random}. In particular, the conditional
 distribution of $\boldsymbol{y}_{ki}$ given a vector of patient-specific random effects $\boldsymbol{b}_{ki}$ is assumed to be a member of the exponential family, with linear predictor given by,
 \begin{equation}
 \label{eq:long_model}
 g_k\big[E\{y_{ki} (t) \mid \boldsymbol{b}_{ki}\}\big] = m_{ki}(t) = \boldsymbol{x}_{ki}^T(t)\boldsymbol{\beta}_{k} + \boldsymbol{z}_{ki}^T(t)\boldsymbol{b}_{ki},
 \end{equation}
 where $g_k(\cdot)$ denotes a known one-to-one monotonic link function, $y_{ki}(t)$ denotes the
-value of the ${k\mbox{-th}}$ longitudinal outcome for the ${i\mbox{-th}}$ patient at time $t$, and $\boldsymbol{x}_{ki}(t)$ and $\boldsymbol{z}_{ki}(t)$ denote the time-dependent design vectors for the fixed $\boldsymbol{\beta}_{k}$ and random effects $\boldsymbol{b}_{ki}$, respectively. To account for the association between the different longitudinal outcomes, we link their corresponding random effects. More specifically, the complete vector of random effects ${\boldsymbol{b}_{i} = (\boldsymbol{b}_{1i}^T, \ldots, \boldsymbol{b}_{Ki})^T}$ is assumed to follow a multivariate normal distribution with mean zero and variance-covariance matrix $W$.
+value of the ${k\mbox{-th}}$ longitudinal outcome for the ${i\mbox{-th}}$ patient at time $t$, and $\boldsymbol{x}_{ki}(t)$ and $\boldsymbol{z}_{ki}(t)$ denote the time-dependent design vectors for the fixed $\boldsymbol{\beta}_{k}$ and random effects $\boldsymbol{b}_{ki}$, respectively. To account for the association between the different longitudinal outcomes, we link their corresponding random effects. More specifically, the complete vector of random effects ${\boldsymbol{b}_{i} = (\boldsymbol{b}_{1i}^T, \ldots, \boldsymbol{b}_{Ki}^T)^T}$ is assumed to follow a multivariate normal distribution with mean zero and variance-covariance matrix $W$.
 
 For the survival process, we assume that the hazard of \textit{progression} $h_i(t)$ at a time $t$ depends on a function of the patient and outcome-specific linear predictors $m_{ki}(t)$ and/or the random effects. More specifically,
 %\begin{equation}
@@ -33,4 +33,4 @@ f\big\{ \mathcal{M}_{i}(t), \boldsymbol{w}_i, \boldsymbol{b}_{i}, \boldsymbol{\a
 \end{array}
 \right.
 \end{eqnarray*}
-These formulations of $f(\cdot)$ postulate that the hazard of progression at time $t$ may be associated with the underlying level $m_i(t)$ of the longitudinal outcome at $t$, or with both the level and velocity $m'_i(t)$ (e.g., PSA value and velocity in prostate cancer) of the outcome at $t$. Lastly, $h_0(t)$ is the baseline hazard at time $t$, and is modeled flexibly using P-splines~\citep{eilers1996flexible}. The detailed specification of the baseline hazard $h_0(t)$, and the joint parameter estimation of the longitudinal and relative-risk sub-models using the Bayesian approach are presented in WebAppendix A.
+These formulations of $f(\cdot)$ postulate that the hazard of progression at time $t$ may be associated with the underlying level $m_i(t)$ of the longitudinal outcome at $t$, or with both the level and velocity $m'_i(t)$ (e.g., PSA value and velocity in prostate cancer) of the outcome at $t$. Lastly, $h_0(t)$ is the baseline hazard at time $t$, and is modeled flexibly using P-splines~\citep{eilers1996flexible}. The detailed specification of the baseline hazard $h_0(t)$, and the joint parameter estimation of the longitudinal and relative-risk sub-models using the Bayesian approach are presented in Web-Appendix A.
