--- a/report/clinical/mainmatter/conclusion.tex
+++ b/report/clinical/mainmatter/conclusion.tex
@@ -1,8 +1,3 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Conclusions}
-Prediction tool for risk of upgrading presented in a web-based application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}), for assisting patients/doctors in making biopsy decisions during prostate cancer AS. Our web-application provides the patient's current and future risks of upgrading, and personalized biopsy schedules based on this risk. Our web-application enables shared decision making of biopsy schedule by comparing fixed and personalized schedules on the total biopsies and expected time delay in detection of upgrading.
-
-Currently supported cohorts are the world’s largest AS cohort PRIAS (model development), and the largest five GAP3 database cohorts (model external validation). Risk prediction accuracy in validation cohorts was better only if they had the rate of reclassification similar to PRIAS
-
-Instead of mentionre currently supported cohorts say:
-Not in conclusion, more a general remarks that calibration to a specific setting is adviasble or something like that. 
+We successfully developed and validated a model for predicting upgrading-risk, and providing risk-based personalized biopsy decisions, in prostate cancer AS. The model made available via a user-friendly web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) enables shared decision making of biopsy schedules by comparing fixed and personalized schedules on total biopsies and expected time delay in detecting upgrading. Novel biomarkers and MRI data can be added as predictors in the model to improve predictions in the future. Recalibration of the baseline hazard of upgrading-risk is advised before using the model in cohorts other than the PRIAS cohort.
