--- a/report/clinical/supplementary/A_param_estimation.tex
+++ b/report/clinical/supplementary/A_param_estimation.tex
@@ -20,7 +20,7 @@ In our joint model, the patient-specific PSA measurements over time are modeled 
 \end{equation}
 where, $m_{i}(t)$ denotes the measurement error free value of $\log_2 (\mbox{PSA} + 1)$ transformed \citep{pearson1994mixed,lin2000latent} measurements at time $t$. We model it non-linearly over time using B-splines \citep{de1978practical}. To this end, our B-spline basis function $B_k\{(t-2)/2,(\mathcal{K}-2)/2\}$ has 3 internal knots at $\mathcal{K} = \{0.5, 1.3, 3\}$ years, which are the three quartiles of the observed follow-up times. The boundary knots of the spline are at 0 and 6.3 years (95-th percentile of the observed follow-up times). We mean centered (mean 2 years) and standardized (standard deviation 2 years) the follow-up time $t$ and the knots of the B-spline $\mathcal{K}$ during parameter estimation for better convergence. The fixed effect parameters are denoted by ${\{\beta_{0},\ldots,\beta_{5}\}}$, and ${\{b_{0i}, \ldots, b_{4i}\}}$ are the patient specific random effects. The random effects follow a multivariate normal distribution with mean zero and variance-covariance matrix $\boldsymbol{D}$. The error $\varepsilon_{i}(t)$ is assumed to be t-distributed with three degrees of freedom (see Appendix~B.1) and scale $\sigma$, and is independent of the random effects. 
 
-To model the impact of PSA measurements on the risk of upgrading, our joint model uses a relative risk sub-model. More specifically, the hazard of upgrading denoted as $h_i(t)$, and the cumulative risk of upgrading denoted as $R_i(t)$, at a time $t$ are (see Panel~C, Figure~\ref{fig:jmExplanationPlot_113}):
+To model the impact of PSA measurements on the risk of upgrading, our joint model uses a relative risk sub-model. More specifically, the hazard of upgrading denoted as $h_i(t)$, and the cumulative-risk of upgrading denoted as $R_i(t)$, at a time $t$ are (see Panel~C, Figure~\ref{fig:jmExplanationPlot_113}):
 \begin{equation}
 \label{eq:rel_risk_model}
 \begin{split}
@@ -69,18 +69,43 @@ With regards to the choice of the distribution for the error term $\varepsilon$ 
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/qqplot.eps}}
-\caption{\textbf{Quantile-quantile plot} of subject-specific PSA residuals from two different joint models fitted to the PRIAS dataset. \textbf{Panel A}: model assuming a t-distribution (df=3) for the error term $\varepsilon$ (see Equation \ref{eq:long_model_psa}). \textbf{Panel B}: model assuming a normal distribution for the error term $\varepsilon$.}
+\caption{\textbf{Quantile-quantile plot} of subject-specific PSA residuals from two different joint models fitted to the PRIAS dataset. \textbf{Panel A}: model assuming a t-distribution (df=3) for the error term $\varepsilon$ (see Equation \ref{eq:long_model_psa}). \textbf{Panel B}: model assuming a normal distribution for the error term $\varepsilon$. We selected the model with t-distributed error terms.}
 \label{fig:qqplot}
 \end{figure}
 
 \clearpage
 \subsection{Results}
+Characteristics of the five validation cohorts from the GAP3 database~\citep{gap3_2018} are shown in Table~\ref{table:gap3_summary}. The cause-specific cumulative upgrading-risk in these cohorts is shown in Figure~\ref{fig:npmle_plot}.
 
-\begin{figure}
+\begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/npmle_plot.eps}}
-\caption{\textbf{Nonparametric estimate \citep{turnbull1976empirical} of cumulative risk of upgrading} in the world's largest AS cohort PRIAS, and largest five AS cohorts from the GAP3 database \citep{gap3_2018}. Abbreviations are \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative AS.}
+\caption{\textbf{Nonparametric estimate \citep{turnbull1976empirical} of the cause-specific cumulative upgrading-risk} in the world's largest AS cohort PRIAS, and largest five AS cohorts from the GAP3 database \citep{gap3_2018}. Abbreviations are \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative AS.}
 \label{fig:npmle_plot}
 \end{figure}
+
+\begin{landscape}
+\begin{table}
+\small\sf\centering
+\caption{\textbf{Summary of the five validation cohorts from the GAP3 database~\citep{gap3_2018}}. The primary event of interest is upgrading, that is, increase in Gleason grade group from group~1 to 2 or higher. \#PSA: number of PSA, \#biopsies: number of biopsies, IQR:~interquartile range, PSA:~prostate-specific antigen. Full names of cohorts are \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative AS.}
+\label{table:gap3_summary}
+\begin{tabular}{lrrrrr}
+\hline
+\textbf{Characteristic} & \textbf{Hopkins} & \textbf{Toronto} & \textbf{MSKCC} & \textbf{MUSIC} & \textbf{KCL}\\
+\hline
+Total patients & 1392 & 1046 & 894 &  2743 & 616\\
+Upgrading (primary event) & 260 & 359 & 242 & 385 & 198\\
+\hline
+Median age (years) & 62 (IQR: 66--69) & 67 (IQR: 60--72) & 63 (IQR: 57--68) & 65 (IQR: 60--71) & 63 (IQR: 58--68)\\
+Median follow-up per patient (years) &  3 (IQR: 1.3--5.8) & 4.5 (IQR: 1.9--8.4) & 5.3 (IQR: 1.8--8.3) & 1.2 (IQR: 0.6--2.2) & 2.4 (IQR: 1.3--3.8)\\
+Total PSA measurements & 11126 & 13984 & 10704 & 12087 & 2987\\
+Median \#PSA per patient &  6 (IQR: 4--11) & 12 (IQR: 7--19) & 11 (IQR: 5--17) & 4 (IQR: 2--6) & 4 (IQR: 2--6)\\
+Median PSA (ng/mL) & 4.7 (IQR: 2.9--6.7) & 6 (IQR: 3.7--9.0) & 4.7 (IQR: 2.8--7.1) & 5.1 (IQR: 3.4--7.1) & 6 (IQR: 4--9)\\
+Total biopsies & 1926 & 909 & 1102 & 1032 & 484\\
+Median \#biopsies per patient &  1 (IQR: 1--2) &  1 (IQR: 1--2) &  1 (IQR: 1--2) & 1 (IQR: 1--1) & 1 (IQR: 1--1)\\
+\hline
+\end{tabular}
+\end{table}
+\end{landscape}
 
 The joint model was fitted using the R package \textbf{JMbayes} \citep{rizopoulosJMbayes}. This package utilizes the Bayesian methodology to estimate model parameters. The corresponding posterior parameter estimates are shown in Table~\ref{tab:PSA_long} (longitudinal sub-model for PSA outcome) and Table~\ref{tab:PSA_survival} (relative risk sub-model). The parameter estimates for the variance-covariance matrix $\boldsymbol{D}$ from the longitudinal sub-model for PSA are shown in the following Table~\ref{tab:D_matrix}:
 \begin{table}
@@ -162,8 +187,8 @@ Fitted $\log_2 (\mbox{PSA} + 1)$ velocity & -0.085 & 0.308 & 2.433 [1.883, 2.962
 
 \begin{table}
 \small\sf\centering
-\caption{\textbf{Effect of $\log_2 (\mbox{PSA} + 1)$ value and velocity on hazard of upgrading in different cohorts}. We fitted separate joint models for each of the five GAP3 validation cohorts. The specification of these joint models was same as that of the model for PRIAS. Two important parameters of the relative-risk sub-model, namely, the $\log_2 (\mbox{PSA} + 1)$ value and velocity differ between the cohorts. The mean estimate of these parameters with 95\% credible interval in brackets is given below. Strongest average effect of PSA velocity is in PRIAS cohort, whereas the weakest is in KCL cohort. The strongest average effect of PSA value is in the Toronto cohort whereas the weakest is in PRIAS cohort.}
-\label{tab:PSA_survival_all}
+\caption{\textbf{Parameters of the relative risk sub-model in validation cohorts}. We fitted separate joint models for each of the five GAP3 validation cohorts as well. The specification of these joint models was same as that of the model for PRIAS. Two important predictors in the relative-risk sub-model, namely, the $\log_2 (\mbox{PSA} + 1)$ value and velocity have different impact on upgrading-risk across the cohorts. Table shows the mean estimate of these parameters with 95\% credible interval in brackets. Strongest average effect of $\log_2 (\mbox{PSA} + 1)$ velocity is in PRIAS cohort, whereas the weakest is in KCL cohort. The strongest average effect of $\log_2 (\mbox{PSA} + 1)$ value is in the Toronto cohort whereas the weakest is in PRIAS cohort.}
+\label{tab:PSA_survival_gap3}
 \begin{tabular}{lrr}
 \hline
 Cohort & Fitted $\log_2 (\mbox{PSA} + 1)$ value & Fitted $\log_2 (\mbox{PSA} + 1)$ velocity\\
