--- a/report/clinical/supplementary/B_risk_prediction_validation.tex
+++ b/report/clinical/supplementary/B_risk_prediction_validation.tex
@@ -1,7 +1,7 @@
 % !TEX root =  ../supplementary.tex
 \section{Risk Predictions for Upgrading}
 \label{sec:param_estimates_jm_fit_prias}
-Let us assume a new patient $j$, for whom we need to estimate the risk of upgrading. Let his current follow-up visit time be $s$, latest time of biopsy be $t$, observed vector PSA measurements be $\mathcal{Y}_{j}(s)$. The combined information from the observed data about the time of upgrading, is given by the following posterior predictive distribution $g(T^*_j)$ of his time $T^*_j$ of upgrading:
+Let us assume a new patient $j$, for whom we need to estimate the upgrading-risk. Let his current follow-up visit time be $s$, latest time of biopsy be $t$, observed vector PSA measurements be $\mathcal{Y}_{j}(s)$. The combined information from the observed data about the time of upgrading, is given by the following posterior predictive distribution $g(T^*_j)$ of his time $T^*_j$ of upgrading:
 \begin{equation*}
 \label{eq:post_pred_dist}
 \begin{aligned}
@@ -12,7 +12,7 @@ g(T^*_j) &= p\big\{T^*_j \mid T^*_j > t, \mathcal{Y}_{j}(s), \mathcal{D}_n\big\}
 \end{equation*}
 The distribution $g(T^*_j)$ depends not only depends on the observed data of the patient $T^*_j > t, \mathcal{Y}_{j}(s)$, but also depends on the information from the PRIAS dataset $\mathcal{D}_n$. To this the the posterior distribution of random effects $\boldsymbol{b}_j$ and posterior distribution of the vector of all parameters $\boldsymbol{\theta}$ are utilized, respectively. The distribution $g(T^*_j)$ can be estimated as detailed in \citet{rizopoulos2017dynamic}. Since, majority of the prostate cancer patients may not obtain upgrading in the current follow-up period of PRIAS (thirteen years), $g(T^*_j)$ can only be estimated for a currently limited follow-up period.
 
-The cumulative risk of upgrading can be derived from $g(T^*_j)$ as given in~\citep{rizopoulos2017dynamic}. It is given by:
+The cause-specific cumulative upgrading-risk can be derived from $g(T^*_j)$ as given in~\citep{rizopoulos2017dynamic}. It is given by:
 \begin{equation}
 \label{eq:dynamic_risk_prob}
 R_j(u \mid t,s) = \mbox{Pr}\big\{T^*_j > u \mid T^*_j > t, \mathcal{Y}_{j}(s), \mathcal{D}_n\big\}, \quad u \geq t.
@@ -21,7 +21,7 @@ The personalized risk profile of the patient (see Panel~C, Figure~\ref{fig:dynri
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/dynrisk_plot_102.eps}}
-\caption{\textbf{Cumulative risk of (upgrading) changing dynamically over follow-up} as more patient data is gathered. The three \textbf{Panels~A,B~and~C:} are ordered by the time of the latest visit (dashed vertical black line) of a new patient. At each of the latest follow-up visits, we combine the accumulated PSA measurements (shown in blue), and latest time of negative biopsy (solid vertical green line) to obtain the updated cumulative risk profile (shown in red) of the patient.}
+\caption{\textbf{Cause-specific cumulative upgrading-risk changing dynamically over follow-up} as more patient data is gathered. The three \textbf{Panels~A,B~and~C:} are ordered by the time of the latest visit (dashed vertical black line) of a new patient. At each of the latest follow-up visits, we combine the accumulated PSA measurements (shown in blue), and latest time of negative biopsy (solid vertical green line) to obtain the updated cumulative-risk profile (shown in red) of the patient.}
 \label{fig:dynrisk_plot_102}
 \end{figure}
 
@@ -30,7 +30,7 @@ The personalized risk profile of the patient (see Panel~C, Figure~\ref{fig:dynri
 We wanted to check the usefulness of our model for not only the PRIAS patients but also for patients from other cohorts. To this end, we validated our model in the PRIAS dataset (internal validation) and in largest five cohorts from the GAP3 database~\citep{gap3_2018}. These are the University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC).
 
 \textbf{\textit{Calibration-in-the-large}}
-We first assessed calibration-in-the-large~\citep{steyerberg2010assessing} of our model in the aforementioned cohorts. To this end, we used our model to predict the cumulative risk of upgrading for each patient given their PSA measurements and biopsy results. We then averaged the resulting profiles of cumulative risk of upgrading. Subsequently we compared the averaged cumulative-risk profile with a non-parametric estimate~\citep{turnbull1976empirical} of the cumulative risk of upgrading in each of the cohorts. The results are shown in Panel~A of Figure~\ref{fig:calib_before_after}. We can see that our model's calibration is fine only in PRIAS and Hopkins cohorts. To improve our model's calibration in KCL, MUSIC, Toronto, and MSKCC cohorts, we recalibrated the baseline hazard of the joint model fitted to the PRIAS dataset, individually for each of these cohorts. More specifically, given the data of an external cohort $\mathcal{D}_n^c$, where $c$ denotes the cohort, the recalibrated parameters $\boldsymbol{\gamma}_{h0}^c$ (\ref{sec:jm_framework}) of the log baseline hazard are given by:
+We first assessed calibration-in-the-large~\citep{steyerberg2010assessing} of our model in the aforementioned cohorts. To this end, we used our model to predict the cause-specific cumulative upgrading-risk for each patient given their PSA measurements and biopsy results. We then averaged the resulting profiles of cause-specific cumulative upgrading-risk. Subsequently we compared the averaged cumulative-risk profile with a non-parametric estimate~\citep{turnbull1976empirical} of the cause-specific cumulative upgrading-risk in each of the cohorts. The results are shown in Panel~A of Figure~\ref{fig:calib_before_after}. We can see that our model's calibration is fine only in PRIAS and Hopkins cohorts. To improve our model's calibration in KCL, MUSIC, Toronto, and MSKCC cohorts, we recalibrated the baseline hazard of the joint model fitted to the PRIAS dataset, individually for each of these cohorts. More specifically, given the data of an external cohort $\mathcal{D}_n^c$, where $c$ denotes the cohort, the recalibrated parameters $\boldsymbol{\gamma}_{h0}^c$ (\ref{sec:jm_framework}) of the log baseline hazard are given by:
 \begin{equation}
 p(\boldsymbol{\gamma}_{h0}^c \mid \mathcal{D}_n^c, \boldsymbol{b^c},  \boldsymbol{\theta}) \propto  \prod_{i=1}^{n^c} p(l_i^c, r_i^c \mid \boldsymbol{b^c_i}, \boldsymbol{\theta}) p(\boldsymbol{\gamma}_{h0}^c)
 \end{equation}
@@ -44,11 +44,11 @@ where $n^c$ are the number of patients in the $c$-th cohort and $\boldsymbol{\th
 
 \clearpage
 \textbf{\textit{Recalibrated PRIAS Model Versus Individual Joint Models For Each Cohort}}
-We wanted to check if our recalibrated PRIAS model performed as good as a new joint model that could be fitted to the external cohorts. To this end, we predicted cumulative-risk of upgrading for each patient from each cohort using two sets of models, namely the recalibrated PRIAS model for each cohort, and a new joint model fitted to each cohort. The difference in predicted cumulative-risk of upgrading from these models is shown in Figure~\ref{fig:calib_insmall_after}. We can see that the difference is smaller in those cohorts in which the effects of $\log_2 (\mbox{PSA} + 1)$ value and velocity were similar to that of PRIAS~(Table~\ref{tab:PSA_survival_all}). For example, the Hopkins cohort had parameter estimates similar to that of PRIAS and consequently the difference in predicted risks for this cohort is smallest. The opposite of this phenomenon holds true for the MUSIC and KCL cohorts.
+We wanted to check if our recalibrated PRIAS model performed as good as a new joint model that could be fitted to the external cohorts. To this end, we predicted cause-specific cumulative upgrading-risk for each patient from each cohort using two sets of models, namely the recalibrated PRIAS model for each cohort, and a new joint model fitted to each cohort. The difference in predicted cause-specific cumulative upgrading-risk from these models is shown in Figure~\ref{fig:calib_insmall_after}. We can see that the difference is smaller in those cohorts in which the effects of $\log_2 (\mbox{PSA} + 1)$ value and velocity were similar to that of PRIAS~(Table~\ref{tab:PSA_survival_gap3}). For example, the Hopkins cohort had parameter estimates similar to that of PRIAS and consequently the difference in predicted risks for this cohort is smallest. The opposite of this phenomenon holds true for the MUSIC and KCL cohorts.
  
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=0.85\columnwidth]{images/calib_insmall_after.eps}}
-\caption{\textbf{Comparison of predictions from recalibrated PRIAS model with individual joint models fitted to external cohorts:} On Y-axis we show the difference between predicted cumulative-risk of upgrading for individual patients using two models, namely the recalibrated PRIAS model for each cohort, and individual joint model fitted to each cohort. The figure shows that the difference is smaller in those cohorts in which the effects of $\log_2 (\mbox{PSA} + 1)$ value and velocity were similar to that of PRIAS~(Table~\ref{tab:PSA_survival_all}). Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\caption{\textbf{Comparison of predictions from recalibrated PRIAS model with individual joint models fitted to external cohorts:} On Y-axis we show the difference between predicted cause-specific cumulative upgrading-risk for individual patients using two models, namely the recalibrated PRIAS model for each cohort, and individual joint model fitted to each cohort. The figure shows that the difference is smaller in those cohorts in which the effects of $\log_2 (\mbox{PSA} + 1)$ value and velocity were similar to that of PRIAS~(Table~\ref{tab:PSA_survival_gap3}). Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
 \label{fig:calib_insmall_after}
 \end{figure}
 
@@ -60,7 +60,7 @@ We calculate AUC and MAPE in a time-dependent manner. More specifically, given t
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{Maximum follow-up period up to which we can reliably predict risk of upgrading}. In each cohort, this time point is chosen such that there are at least 10 patients who experience upgrading after this time point. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\caption{\textbf{Maximum follow-up period up to which we can reliably predict upgrading-risk}. In each cohort, this time point is chosen such that there are at least 10 patients who experience upgrading after this time point. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
 \label{tab:max_pred_time}
 \begin{tabular}{l|r}
 \hline
@@ -77,11 +77,11 @@ Hopkins & 7\\
 \end{tabular}	
 \end{table}
 
-The results for estimates of AUC and MAPE are summarized in Figure~\ref{fig:auc_pe_recalib}, and in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_MUSIC}. Results are based on the recalibrated PRIAS model for the GAP3 cohorts. The results show that AUC remains more or less constant in all cohorts as more data becomes available for patients. The AUC obtains a moderate value, roughly between 0.5 and 0.7 for all cohorts. On the other hand, MAPE reduces by a big margin after year two of follow-up. This could be because of two reasons. Firstly, MAPE at year one is based only on four PSA measurements gathered in first year of follow-up, whereas after year two number of PSA measurements increase. Secondly, patients in year one consist of two sub-populations, namely patients with a correct Gleason grade~1 at the time of inclusion in AS, and patients who probably had Gleason grade~2 at inclusion but were misclassified by the urologist as Gleason grade~1 patients. To remedy this problem, a biopsy for all patients at year one is commonly recommended in all AS programs~\citep{bokhorst2015compliance}.
+The results for estimates of AUC and MAPE are summarized in Figure~\ref{fig:auc_pe_recalib}, and in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_MUSIC}. Results are based on the recalibrated PRIAS model for the GAP3 cohorts. The results show that AUC remains more or less constant in all cohorts as more data becomes available for patients. The AUC obtains a moderate value, roughly between 0.5 and 0.7 for all cohorts. On the other hand, MAPE reduces by a big margin after year two of follow-up. This could be because of two reasons. Firstly, MAPE at year one is based only on four PSA measurements gathered in first year of follow-up, whereas after year two number of PSA measurements increase. Secondly, patients in year one consist of two sub-populations, namely patients with a correct Gleason grade group~1 at the time of inclusion in AS, and patients who probably had Gleason grade group~2 at inclusion but were misclassified by the urologist as Gleason grade group~1 patients. To remedy this problem, a biopsy for all patients at year one is commonly recommended in all AS programs~\citep{bokhorst2015compliance}.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/auc_pe_recalib.eps}}
-\caption{\textbf{Validation of Dynamic Cumulative-Risk Predictions}. In \textbf{Panel~A} we can see that the time dependent area under the receiver operating characteristic curve or AUC (measure of discrimination) is above 0.5 in PRIAS (internal validation), and in Toronto, Hopkins, MSKCC, KCL, and MUSIC AS cohorts (external validation). In \textbf{Panel~B} we can see that the time dependent root mean squared prediction error or MAPE (measure of calibration) is similar for PRIAS and Hopkins cohorts. The bootstrapped 95\% confidence interval for these estimates are presented in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_KCL}. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\caption{\textbf{Validation of dynamic predictions of cause-specific cumulative upgrading-risk}. In \textbf{Panel~A} we can see that the time dependent area under the receiver operating characteristic curve or AUC (measure of discrimination) is above 0.5 in PRIAS (internal validation), and in Toronto, Hopkins, MSKCC, KCL, and MUSIC AS cohorts (external validation). In \textbf{Panel~B} we can see that the time dependent root mean squared prediction error or MAPE (measure of calibration) is similar for PRIAS and Hopkins cohorts. The bootstrapped 95\% confidence interval for these estimates are presented in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_KCL}. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
 \label{fig:auc_pe_recalib}
 \end{figure}
 
